2016-02-09	Ad astra per alas porci.  (2)

		bin/biting-pear-doge.ccc ,
		GNUmakefile ,
		.gitignore :
		- share/biting-pear/doge.ccc -> bin/biting-pear-doge.ccc

2016-02-08	Ad astra per alas porci.

		share/biting-pear/doge.ccc :
		- now requires a `seed' argument

2016-02-04	License change.  Indirect jumps, continued.

		include/biting-pear/omg.h :
		- try to move %cs read further away from its use

		test/test-extra-3.ccc :
		- now creates several "Hello, world!" strings to stress-test
		  the scrambling

		test/test-extra-3.good :
		- updated

		LICENSE :
		- changed to the GNU GPL v3, for releases from here on

2016-02-03	Yet another type of indirect jump.

		include/biting-pear/omg.h :
		- added far returns

2016-01-31	A bit more refactoring.

		share/biting-pear/calm.ccc :
		- restructured code for invoking cc1plus and echoing command
		  line arguments

2016-01-27	Slightly better documentation.

		README.md :
		- added some installation instructions

2016-01-24	A bit of refactoring.

		GNUmakefile ,
		bin/biting-pear-c++.ccc ,
		share/biting-pear/calm.ccc :
		- factored out shocked(.) and curious(...) to share/biting-
		  pear/epic.cc

		share/biting-pear/epic.cc :
		- initial version; split from share/biting-pear/calm.ccc

2016-01-23	Nice wrapper.

		.gitignore :
		- added *.ii and calm, removed nomnom

		GNUmakefile :
		- updated to build and use wrapper
		- now preprocesses to .ii files instead of .i files
		- now builds internal passes from share/biting-pear/ rather
		  than libexec/biting-pear/
		- $(config.h.host) and $(config.h.target) now depend on
		  config.cache
		- now defines biting_pear::impl::getenv(.) in $(config.h.host)
		- fixed installation of host files

		bin/biting-pear-c++.ccc ,
		share/biting-pear/calm.ccc ,
		share/biting-pear/calm.spec :
		- initial version

		configure :
		- now probes for secure_getenv(.)

		share/biting-pear/doge.ccc :
		- moved from libexec/biting-pear/doge.ccc

		share/biting-pear/nomnom.cc :